# B.A-B.A-Analyse-Data-science

./: Données_Restaurant.xlsx  Données_Restaurant.xlsx:Zone.Identifier  Nan.ipynb  README.md  analyse.ipynb  exercice1.ipynb  exercice2.ipynb  exercice3.ipynb  exercice_pipeline.ipynb  exercice_pipiline.ipynb  exerice_encoder.ipynb  features_selecteor.ipynb  main.ipynb  nettoyageOutliers.ipynb  normalisation.ipynb  pipline.ipynb  polynomialEngineering.ipynb  preprocessing.ipynb  pyproject.toml  sequence.ipynb  test_hypothese.ipynb
